<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionOneActivity" >

    <RadioGroup
        android:id="@+id/radioGroupQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="40dp" >

        <RadioButton
            android:id="@+id/opcaoUmQuestionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opcaoUmQuestaoUm" />

        <RadioButton
            android:id="@+id/opcaoDoisQuestionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoDoisQuestaoUm" />

        <RadioButton
            android:id="@+id/opcaoTresQuestionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoTresQuestaoUm" />
        
        <RadioButton
            android:id="@+id/opcaoQuatroQuestionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcaoQuatroQuestaoUm" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConfirmarQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupQ1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/ConfirmaQuestao" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/QuestaoUm"
        android:textSize="13pt"
        android:textStyle="bold" />

</RelativeLayout>